[package]
name = "treasure-hunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
sdl2 = { version = "*", features = ["bundled", "ttf"], default-features = false }
nalgebra-glm = "*"
obj-rs = "*"
colors-transform = "*"
rand = "0.8.4"
image = "0.25.1"
specs = {version = "0.16.0", features = ["specs-derive"]}
specs-derive = "0.4.1"
